[gd_scene load_steps=2 format=3 uid="uid://dlevelup000001"]

[ext_resource type="Script" path="res://scripts/ui/level_up.gd" id="1_levelup"]

[node name="LevelUp" type="CanvasLayer"]
layer = 50
process_mode = 3
script = ExtResource("1_levelup")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -380.0
offset_right = 280.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="LevelUpLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="ChooseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose an upgrade"
horizontal_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 12

[node name="Choice1" type="PanelContainer" parent="VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Margin1" type="MarginContainer" parent="VBoxContainer/ChoicesContainer/Choice1"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBox1" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice1/Margin1"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="IconArea1" type="Control" parent="VBoxContainer/ChoicesContainer/Choice1/Margin1/HBox1"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
clip_contents = true

[node name="Icon1" type="TextureRect" parent="VBoxContainer/ChoicesContainer/Choice1/Margin1/HBox1/IconArea1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoBox1" type="VBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice1/Margin1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Name1" type="Label" parent="VBoxContainer/ChoicesContainer/Choice1/Margin1/HBox1/InfoBox1"]
layout_mode = 2
text = "Upgrade Name"

[node name="Desc1" type="Label" parent="VBoxContainer/ChoicesContainer/Choice1/Margin1/HBox1/InfoBox1"]
layout_mode = 2
size_flags_vertical = 3
text = "Description here"
autowrap_mode = 2

[node name="Choice2" type="PanelContainer" parent="VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Margin2" type="MarginContainer" parent="VBoxContainer/ChoicesContainer/Choice2"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBox2" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice2/Margin2"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="IconArea2" type="Control" parent="VBoxContainer/ChoicesContainer/Choice2/Margin2/HBox2"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
clip_contents = true

[node name="Icon2" type="TextureRect" parent="VBoxContainer/ChoicesContainer/Choice2/Margin2/HBox2/IconArea2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoBox2" type="VBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice2/Margin2/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Name2" type="Label" parent="VBoxContainer/ChoicesContainer/Choice2/Margin2/HBox2/InfoBox2"]
layout_mode = 2
text = "Upgrade Name"

[node name="Desc2" type="Label" parent="VBoxContainer/ChoicesContainer/Choice2/Margin2/HBox2/InfoBox2"]
layout_mode = 2
size_flags_vertical = 3
text = "Description here"
autowrap_mode = 2

[node name="Choice3" type="PanelContainer" parent="VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Margin3" type="MarginContainer" parent="VBoxContainer/ChoicesContainer/Choice3"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBox3" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice3/Margin3"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="IconArea3" type="Control" parent="VBoxContainer/ChoicesContainer/Choice3/Margin3/HBox3"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
clip_contents = true

[node name="Icon3" type="TextureRect" parent="VBoxContainer/ChoicesContainer/Choice3/Margin3/HBox3/IconArea3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoBox3" type="VBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice3/Margin3/HBox3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Name3" type="Label" parent="VBoxContainer/ChoicesContainer/Choice3/Margin3/HBox3/InfoBox3"]
layout_mode = 2
text = "Upgrade Name"

[node name="Desc3" type="Label" parent="VBoxContainer/ChoicesContainer/Choice3/Margin3/HBox3/InfoBox3"]
layout_mode = 2
size_flags_vertical = 3
text = "Description here"
autowrap_mode = 2

[node name="ActionsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="RefreshButton" type="Button" parent="VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Refresh"

[node name="SkipButton" type="Button" parent="VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Skip"